# cookiecutter-pySigma-backend

./: LICENSE  README.md  cookiecutter.json
.github/workflows/: test.yml
hooks/: post_gen_project.py
{{ cookiecutter.package_name }}/: LICENSE  README.md  print-coverage.py  pyproject.toml
{{ cookiecutter.package_name }}/.github/workflows/: release.yml  test.yml
{{ cookiecutter.package_name }}/sigma/backends/{{ cookiecutter.backend_package_name }}/: __init__.py  {{ cookiecutter.backend_package_name }}.py
{{ cookiecutter.package_name }}/sigma/pipelines/{{ cookiecutter.backend_package_name }}/: __init__.py  {{ cookiecutter.backend_package_name }}.py
{{ cookiecutter.package_name }}/tests/: test_backend_{{ cookiecutter.backend_package_name }}.py  test_backend_{{ cookiecutter.backend_package_name }}_correlations.py  test_pipelines_{{ cookiecutter.backend_package_name }}.py
